@@ -1,7 +1,13 @@
+2009-04-07
+	* Modify MemoWidget() to set the default fontsize as 11pt.
+	* Fix all bugs caused by change of enc(): encoding issue.
+	
 2009-04-06
 	* Minor bugfix of write.FileList() which is caused by change of enc().
 	* Minor bugfixes of AddTo buttons in C-cat and F-cat Tabs.
 	* gselect.list() is documented and exported.
+	* new function of GetAttr().
+	* Minor bugfix of rename() and RenameAttrButton(): handling the duplicated name correctly now.
 	
 2009-04-01
 	* gselect.list has two new argument: width and height.
